--- a/index.Rmd
+++ b/index.Rmd
@@ -39,6 +39,7 @@ class: inverse, center, title-slide, middle
 library(emo)
 library(shiny)
 library(countdown)
+library(sass)
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(
   fig.width = 10, fig.height = 6, fig.retina = 2,
@@ -193,7 +194,7 @@ CSS stands for Cascading Style Sheets
 
 .pull-left[
 ## Apply CSS
-```{r}
+```{r, eval=FALSE}
 tags$style(
   "p {
     color: red;
@@ -204,7 +205,7 @@ tags$style(
 ]
 
 .pull-right[
-<iframe width="100%" src="https://unleash-shiny.shinyapps.io/css_selector-class-id/" allowfullscreen="" frameborder="0" scrolling="yes" height="470px"></iframe>
+<iframe width="100%" src="https://unleash-shiny.shinyapps.io/css_selector-class-id/" allowfullscreen="" frameborder="0" scrolling="yes" height="400px"></iframe>
 ]
 
 
@@ -231,7 +232,7 @@ class: header_background
 <br>
 
 - Sass = Syntactically Awesome Style Sheets.
-- Programmable: variables, loops, operators, modules, ...
+- Programmable: variables, functions, loops, operators, modules, ...
 - An R interface exists: `{sass}`.
 
 .center[
@@ -239,15 +240,204 @@ class: header_background
 ]
 
 ---
-# 
+class: header_background
+# {sass} in action
+
+<br>
+
+.panelset[
+.panel[.panel-name[Variables]
+.small.pull-left[
+```{r, eval=FALSE}
+rule1 <- ".class-1{ color: $color; }"
+rule2 <- ".class-2{ background-color: $color; }"
+sass(input = list(color = "purple", rule1, rule2))
+```
+]
+
+.pull-right[
+```
+#> /* CSS */
+#> .class-1 {
+#>   color: purple;
+#> }
+#> 
+#> .class-2 {
+#>   background-color: purple;
+#> }
+```
+]
+]
+
+.panel[.panel-name[Functions]
+
+.small.pull-left[
+```{r, eval=FALSE}
+sass(
+  list(
+    a = 2,
+    b = 4,
+    "@function multiply($parm1, $parm2) {
+      @debug 'parm1 is #{$parm1}';
+      @debug 'parm2 is #{$parm2}';
+
+      @return $parm1 * $parm2;
+    }",
+    ".my-class {
+      width: multiply($a, $b) * 1px;
+    }"
+  )
+)
+```
+]
+
+.pull-right[
+```
+stdin:4 DEBUG: parm1 is 2
+stdin:5 DEBUG: parm2 is 4
+#> /* CSS */
+#> .my-class {
+#>   width: 8px;
+#> }
+```
+]
+
+]
+
+.panel[.panel-name[With Shiny]
+
+.xsmall.pull-left[
+```{r, eval=FALSE}
+css <- sass(
+  sass_layer(
+    defaults = list(
+      turquoise = "#03a4ff",
+      cyan = "#e705be",
+      green = "#f3d6e9",
+      yellow = "#fdaf2c",
+      red = "#ff483e",
+      "scheme-main" = "hsl(0, 0%, 10%)"
+    ),
+    rules = sass_file(
+      input = system.file(
+        "sass/bulma/bulma.sass",
+        package = "OSUICode"
+      )
+    )
+  )
+)
+```
+]
+
+.pull-right[
+<iframe width="100%" src="https://unleash-shiny.shinyapps.io/sass_examples_shinybulma-custom" allowfullscreen="" frameborder="0" scrolling="yes" height="300px"></iframe>
+]
+
+]
+]
+
+<br>
 
 
 ---
 class: header_background
 # Isn't there something easier?
 
-## Higher level interfaces
+<br>
 
+--
+
+.pull-left[
+## {fresh}
+- Built on top of `{sass}`.
+- For `{shiny}`, `{shinydashboard}`, ...
+]
+
+.pull-right[
+## {bslib}
+- Built on top of `{sass}`.
+- For `{shiny}`.
+- Live theming widget.
+- Dynamic theming. 
+- Conditional rendering. 
+- ...
+]
+
+---
+class: header_background
+# {fresh}
+
+<br>
+
+
+.xsmall.pull-left[
+```{r, eval=FALSE}
+library(fresh)
+dark_theme <- create_theme(
+  bs4dash_vars(
+    navbar_light_color = "#bec5cb",
+    navbar_light_active_color = "#FFF",
+    navbar_light_hover_color = "#FFF"
+  ),
+  bs4dash_yiq(
+    contrasted_threshold = 10, 
+    text_dark = "#FFF", 
+    text_light = "#272c30"
+  ),
+  bs4dash_layout(main_bg = "#353c42"),
+  bs4dash_sidebar_dark(
+    bg = "#272c30", 
+    color = "#bec5cb", 
+    hover_color = "#FFF",
+    submenu_bg = "#272c30", 
+    submenu_color = "#FFF", 
+    submenu_hover_color = "#FFF"
+  ),
+  bs4dash_status(dark = "#272c30"),
+  bs4dash_color(gray_900 = "#FFF", white = "#272c30")
+)
+```
+]
+
+.pull-right[
+```{r, echo = FALSE, out.width='100%', fig.align='center'}
+knitr::include_graphics("assets/images/bs4Dash-fresh.png")
+```
+]
+
+
+---
+class: header_background
+# {bslib}
+
+<br>
+
+.xsmall.pull-left[
+```{r, eval=FALSE}
+library(bslib)
+bslib_neon_theme <- bs_theme(
+  version = 4, 
+  bg = "#000000",
+  fg = "#FFFFFF",
+  primary = "#9600FF",
+  secondary = "#1900A0",
+  success = "#38FF12",
+  info = "#00F5FB",
+  warning = "#FFF100",
+  danger = "#FF00E3",
+  base_font = "Marker Felt",
+  heading_font = "Marker Felt",
+  code_font = "Chalkduster"
+)
+bs_theme_preview(bslib_neon_theme, with_themer = FALSE)
+```
+]
+
+.pull-right[
+```{r, echo = FALSE, out.width='100%', fig.align='center'}
+knitr::include_graphics("assets/images/bootstraplib-theme-preview.png")
+```
+]
 
 
 ---
