--- a/index.Rmd
+++ b/index.Rmd
@@ -105,6 +105,25 @@ class: header_background
 
 
 ---
+class: header_background
+# What I will share today
+
+<br>
+
+.pull-left[
+### How it started ...
+<img src="assets/images/virtual-patient-1.png" width="100%"/>
+]
+
+--
+
+.pull-right[
+### ... 1 years after
+<img src="assets/images/virtual-patient-3.png" width="100%"/>
+]
+
+
+---
 class: header_background 
 # From the simplest app ... 👶
 
@@ -152,6 +171,7 @@ class: header_background
 --
 
 - Few custom HTML tags.
+
 
 ---
 class: header_background
